--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,9 @@ jobs:
         pip install -r requirements.txt 
 
     - name: Test with flake8 and django tests
+      runs:
+        using: 'node16'
       run: |
+      
         # запуск проверки проекта по flake8
         python -m flake8
