--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,10 +71,9 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
-          passphrase: ${{ secrets.PASSPHRASE }} # Если ваш ssh-ключ защищён фразой-паролем
           script: |
             # Выполняет pull образа с DockerHub
-            sudo docker pull lunarbirdmyt/infra-actions
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/infra-actions
             #остановка всех контейнеров
             sudo docker stop $(sudo docker ps -a -q)
-            sudo docker run --rm -d -p 5000:5000 lunarbirdmyt/infra-actions
+            sudo docker run --rm -d -p 5000:5000 ${{ secrets.DOCKER_USERNAME }}/infra-actions
